--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, sans-serif; 
+  font-family: var(--bs-font-sans-serif); 
   margin: 0;
   padding: 20px; 
   background-color: #f4f4f4; 
@@ -8,24 +8,19 @@ body {
 .pokemon-list {
   list-style-type: none; /* Remove bullet points */
   padding: 0; /* Remove padding */
+  display: flex;
+  flex-wrap: wrap; /* Make list items wrap */
+  gap: 10px; /* Add spacing between items */
 }
 
 /* Modal Styles */
-#modal-container {
-  position: fixed;
-  z-index: 1000; /* sit on top */
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto; /* enable scroll if needed */
-  background-color: rgba(0, 0, 0, 0.5);
+.modal-content {
+  border-radius: 10px;
 }
 
 /* Responsive styles */
 @media (max-width: 600px) {
   .pokemon-list {
-    display: flex;
     flex-direction: column; /* Stack items vertically */
     align-items: center; /* Center items */
   }
